syntax = "proto2";

package androidx.test.orchestrator.listeners.proto;

option java_package = 'androidx.test.orchestrator.listeners.proto';
option java_outer_classname = 'OrchestrationResultProto';

message OrchestrationResult {
  optional int64 run_count = 1;
  optional int64 expected_count = 2;
  optional int64 ignored_count = 3;
  optional int64 start_time = 4;
  optional int64 finish_time = 5;
  // TODO: failures
}
